force-app/main/default/objects/Carteira__c/Carteira__c.object-meta.xml
<CustomObject>
    <label>Carteira</label>
    <nameField>
        <label>Nome de Carteira</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteiras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>