force-app/main/default/objects/Carteira__c/fields/Apoio__c.field-meta.xml
<CustomField>
    <fullName>Apoio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apoio</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carteiras1</relationshipName>
    <type>Lookup</type>
</CustomField>