force-app/main/default/objects/Carteira__c/fields/AteOCEPSemFormatacao__c.field-meta.xml
<CustomField>
    <fullName>AteOCEPSemFormatacao__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Ate_o_CEP__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Até o CEP sem formatação</label>
    <type>Text</type>
</CustomField>