force-app/main/default/objects/Carteira__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <label>Carteira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>