force-app/main/default/objects/Carteira__c/fields/Cod_Assistente__c.field-meta.xml
<CustomField>
    <fullName>Cod_Assistente__c</fullName>
    <label>Cod Assistente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>