force-app/main/default/objects/Carteira__c/fields/Cod_Destrito__c.field-meta.xml
<CustomField>
    <fullName>Cod_Destrito__c</fullName>
    <label>Cod Destrito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>