force-app/main/default/objects/Carteira__c/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Carteiras</relationshipName>
    <type>Lookup</type>
</CustomField>