force-app/main/default/objects/Carteira__c/fields/Consultoroficial__c.field-meta.xml
<CustomField>
    <fullName>Consultoroficial__c</fullName>
    <label>Consultor(a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consultores</valueSetName>
    </valueSet>
</CustomField>