force-app/main/default/objects/Carteira__c/fields/Do_CEP__c.field-meta.xml
<CustomField>
    <fullName>Do_CEP__c</fullName>
    <inlineHelpText>XXXXX-XXX</inlineHelpText>
    <label>Do CEP</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>