force-app/main/default/objects/Carteira__c/fields/DoCEPSemFormatacao__c.field-meta.xml
<CustomField>
    <fullName>DoCEPSemFormatacao__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Do_CEP__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do CEP sem formatação</label>
    <type>Text</type>
</CustomField>