force-app/main/default/objects/Carteira__c/fields/Lado__c.field-meta.xml
<CustomField>
    <fullName>Lado__c</fullName>
    <label>Lado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ímpar</fullName>
            </value>
            <value>
                <fullName>Par</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>