force-app/main/default/objects/Carteira__c/fields/Nome_do_destrito__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_destrito__c</fullName>
    <label>Nome do destrito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>