force-app/main/default/objects/Carteira__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>