force-app/main/default/objects/Carteira__c/validationRules/Formato_Ate_CEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Formato_Ate_CEP</fullName>
    <active>true</active>
    <errorConditionFormula>IF(REGEX(  Ate_o_CEP__c ,&quot;[0-9]{5}-[0-9]{3}&quot;), false, true)</errorConditionFormula>
    <errorDisplayField>Ate_o_CEP__c</errorDisplayField>
    <errorMessage>Formato do CEP incorreto.</errorMessage>
</ValidationRule>