force-app/main/default/objects/Carteira__c/validationRules/Inserir_Consultor.validationRule-meta.xml
<ValidationRule>
    <fullName>Inserir_Consultor</fullName>
    <active>true</active>
    <errorConditionFormula>Consultor__r.IsActive  = False</errorConditionFormula>
    <errorDisplayField>Consultor__c</errorDisplayField>
    <errorMessage>É necessário inserir um consultor válido.</errorMessage>
</ValidationRule>