force-app/main/default/objects/Carteira__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Do_CEP__c</columns>
    <columns>Ate_o_CEP__c</columns>
    <columns>Consultor__c</columns>
    <columns>Apoio__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>